complete header part

--- a/index.html
+++ b/index.html
@@ -7,6 +7,19 @@
     <title>Document</title>
 </head>
 <body>
- 
+    <header class="header-part">
+        <div class="beautiful-caption">
+            <h1>Let's make beautiful flowers a part of your life.</h1>
+            <p>
+                It is a long established fact that a reader will be distracted by the readable content of a 
+                page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less 
+                normal distribution of letters.
+            </p>
+            <button>Shop Now</button>
+        </div>
+        <div class="beautiful-flower">
+            <img src="images/pngwing 10.png" alt="header-flower" >
+        </div>
+    </header>
 </body>
 </html>
