--- a/index.html
+++ b/index.html
@@ -21,5 +21,54 @@
             <img src="images/pngwing 10.png" alt="header-flower" >
         </div>
     </header>
+    <main>
+        <section class="feature">
+            <div class="feature-title">
+                <h1>Our Featured Flowers</h1>
+                <div class="feature-para">
+                    <p>
+                        It is a long established fact that a reader will be distracted by the readable 
+                        content of a page when looking at its layout
+                    </p>
+                </div>
+                
+            </div>
+            <div class="feature-image">
+                <div>
+                    <div class="image1">
+                        <img src="images/pngwing 5.png" alt="image1">
+                    </div>
+                    <div class="title"><p>Pink Flower Tree</p></div>
+                </div>
+                <div>
+                    <div class="image2">
+                        <img src="images/pngwing 6.png" alt="image2">
+                    </div>
+                    <div class="title"><p>Pink Flower Tree</p></div>
+                </div>
+                <div>
+                    <div class="image3">
+                        <img src="images/pngwing 7.png" alt="image3">
+                    </div>
+                    <div class="title"><p>Pink Flower Tree</p></div>
+                </div>
+                
+            </div>
+            <div class="delivery-part">
+                <div class="delivery-image">
+                    <div class="image1"><img src="images/Group 57.png" alt="image1"></div>
+                    <p>Same Day Delivery. Click & Collect. </p>
+                </div>
+                <div class="delivery-image">
+                    <img src="images/Group 58.png" alt="image1">
+                    <p>Fresh Flowers. Local Growers.</p>
+                </div>
+                <div class="delivery-image">
+                    <img src="images/Group 59.png" alt="image1">
+                    <p>Fresh Flowers. Local Growers. </p>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
