--- a/index.html
+++ b/index.html
@@ -69,6 +69,19 @@
                 </div>
             </div>
         </section>
+        <section class="hot-sale">
+            <div class="hot-sale-caption">
+                <h1>Hot Deal ! Sale Up To 25% <span>off</span></h1>
+                <p>
+                    It is a long established fact that a reader will be distracted by the readable 
+                    content of a page when looking at its layout.
+                </p>
+                <button>Sign Up</button>
+            </div>
+            <div class="hot-sale-image">
+                <img src="images/pngwing 8.png" alt="header-flower" >
+            </div>
+        </section>
     </main>
 </body>
 </html>
