complete instagram part

--- a/index.html
+++ b/index.html
@@ -82,6 +82,28 @@
                 <img src="images/pngwing 8.png" alt="header-flower" >
             </div>
         </section>
+        <section>
+            <div class="Instagram">
+                <h1>Instagram</h1>
+                <p>It is a long established fact that a reader will be distracted by the readable 
+                    content of a page when looking at its layout
+                </p>
+                <div class="Instagram-image">
+                    <img src="images/Flower 01.png" alt="image1">
+                    <img src="images/Rectangle 4.png" alt="image2">
+                    <img src="images/Rectangle 5.png" alt="image3">
+                    <img src="images/Rectangle 6.png" alt="image4">
+                </div>
+            </div>
+            <div class="latest-deal">
+                <div class="latext-caption">
+                    <h1>Get The Latest Deals</h1>
+                    <p>$30 coupon for first shopping</p>
+                    <input type="email" width="400px" placeholder="Enter your email here...">
+                    <button>Subscribe</button>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
