--- a/index.html
+++ b/index.html
@@ -105,5 +105,12 @@
             </div>
         </section>
     </main>
+    <footer class="footer-part">
+        <h1><span>Flower</span>Shop</h1>
+        <p>It is a long established fact that a reader will be distracted by the readable 
+            content of a page when looking at its layout.
+        </p>
+        <p>@2020-2023, FlowerShop.com. All rights reserved. </p>
+</footer>
 </body>
 </html>
