complete bonus part which is team and contact us part

--- a/index.html
+++ b/index.html
@@ -99,11 +99,43 @@
                 <div class="latext-caption">
                     <h1>Get The Latest Deals</h1>
                     <p>$30 coupon for first shopping</p>
-                    <input type="email" width="400px" placeholder="Enter your email here...">
+                    <input type="email"  placeholder="Enter your email here...">
                     <button>Subscribe</button>
                 </div>
             </div>
         </section>
+        <section>
+            <section class="team-part">
+                <div class="title">Team</div>
+                <div class="team">
+                    <div class="team-member1">
+                        <img src="images/pic1.jpg" alt="pic1">
+                        <p>Gloria Bromley</p>
+                    </div>
+                    <div class="team-member2">
+                        <img src="images/pic2.jpg" alt="pic1">
+                        <p>Gloria Bromley</p>
+                    </div>
+                    <div class="team-member3">
+                        <img src="images/pic3.jpg" alt="pic1">
+                        <p>Gloria Bromley</p>
+                    </div>
+                </div>
+                
+            </section>
+            <section class="contact-part">
+                <div class="contact-title">
+                    <h1>Contact Us</h1>
+                </div>
+                <form action="">
+                    <input type="email" width="400px" placeholder="Email">
+                    <textarea id="subject" name="subject" placeholder="Message" style="height:150px"></textarea>
+                  
+                </form>
+                <button class="contact-button">Submit</button>
+            </section>
+        </section>
+
     </main>
     <footer class="footer-part">
         <h1><span>Flower</span>Shop</h1>
